@@ -3,7 +3,9 @@ Summary of important user-visible changes for releases of the sparsersb package
 sparsersb-1???? Release Date: 2015-??-??
 ===============================================================================
 ** Documentation fixes: ???
-** ("get",...) ???
+** sparsersb("get",...) functionality ???
+** sparsersb(A,"any_query_string") functionality (interface to librsb's
+   rsb_mtx_get_info_str ) has been documented and fixed ???
 ** ...
 ===============================================================================
 sparsersb-1.0.0 Release Date: 2015-05-31
